--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,3 +1,8 @@
 @import "abstracts/functions"
 @import "abstracts/variables"
 @import "hugo-osuny"
+@import "layout/footer"
+@import "custom/base/defaults"
+@import "custom/base/fonts"
+@import "custom/base/typography"
+@import "custom/layout/header"
