--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -9,9 +9,17 @@ footer[role="contentinfo"]
             max-width: 100%
             width: auto
 
+    .content
+        > div
+            @include media-breakpoint-up(md)
+                width: 50%
+                &:last-child
+                    text-align: right
+
     nav
         > ul
             @extend .nav
+            flex-direction: column
         li
             @extend .nav-item
         a,
