--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -2,7 +2,7 @@
 $font-family-serif: 'Big Moore It', Serif
 
 // Bootstrap
-$primary: #000000
+$primary: #FFFFFF
 $body-bg: #222222
 $body-color: #FFFFFF
 $link-color: #FFFFFF
@@ -13,8 +13,17 @@ $breadcrumb-margin-bottom: 0
 
 $card-bg: transparent
 
+$dropdown-bg: black
+$dropdown-border-radius: 0
+$dropdown-color: white
+$dropdown-link-color: white
+$dropdown-link-hover-bg: transparent
+
 $font-family-sans-serif: 'Aestetico', Sans-Serif
 $font-size-root: 1rem
+$font-size-base: 1.125rem
+$line-height-base: 1.6
+
 
 $h1-font-size: px2rem(50)
 $h2-font-size: px2rem(28)
