--- a/assets/sass/components/_hero.sass
+++ b/assets/sass/components/_hero.sass
@@ -14,3 +14,8 @@
             text-align: center
         h1
             margin-bottom: 0
+        p
+            font-size: px2rem(20)
+            font-weight: 700
+            line-height: 1.3
+            margin-bottom: px2rem(10)
