--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -7,6 +7,11 @@ $body-bg: #222222
 $body-color: #FFFFFF
 $link-color: #FFFFFF
 
+$blockquote-font-size: px2rem(40)
+$blockquote-footer-color: inherit
+$blockquote-footer-font-size: 1rem
+$blockquote-margin-y: 0
+
 $breadcrumb-active-color: white
 $breadcrumb-font-size: px2rem(14)
 $breadcrumb-margin-bottom: 0
