--- a/assets/sass/custom/base/_typography.sass
+++ b/assets/sass/custom/base/_typography.sass
@@ -3,3 +3,8 @@ h1
     font-style: italic
     font-weight: 400
     line-height: px2rem(70)
+
+blockquote
+    font-family: $font-family-serif
+    font-style: italic
+    font-weight: 400
