--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -17,6 +17,7 @@ footer[role="contentinfo"]
                     text-align: right
 
     nav
+        margin-left: -$nav-link-padding-x
         > ul
             @extend .nav
             flex-direction: column
