--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,9 +1,9 @@
 @import "abstracts/functions"
 @import "abstracts/variables"
 @import "hugo-osuny"
+@import "components/stakeholder"
 @import "custom/base/defaults"
 @import "custom/base/fonts"
-@import "custom/base/typography"
 @import "custom/components/menu"
 @import "custom/layout/header"
 @import "custom/pages/page"
