--- a/layouts/partials/footer/footer-simple.html
+++ b/layouts/partials/footer/footer-simple.html
@@ -1,3 +1,4 @@
+{{ partial "footer/stakeholder.html" }}
 <div class="content">
   <div>
     <nav role="navigation" aria-label="{{ i18n "commons.menu.legal" }}">
