--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -4,10 +4,18 @@ footer[role="contentinfo"]
     padding-top: calc(#{$grid-gutter-width} * 2.5)
 
     .logo
+        display: inline-block
+        margin-bottom: px2rem(30)
         img
             height: 33px
             max-width: 100%
             width: auto
+        & + p
+            font-family: $font-family-serif
+            font-size: px2rem(20)
+            font-style: italic
+            font-weight: 400
+            line-height: px2rem(34)
 
     .content
         > div
@@ -15,7 +23,9 @@ footer[role="contentinfo"]
                 width: 50%
                 &:last-child
                     text-align: right
-
+            &:last-child
+                @extend .col-lg-3
+                @extend .offset-lg-3
     nav
         margin-left: -$nav-link-padding-x
         > ul
