--- a/assets/sass/custom/pages/_page.sass
+++ b/assets/sass/custom/pages/_page.sass
@@ -1,13 +1,8 @@
 .pages__section
     [itemprop="articleBody"],
-    [class^="block"]
+    [class^='block'],
+    [class*=' block']
         h2
             border-bottom: 1px solid rgba(white, .5)
             margin-bottom: px2rem(30)
             padding-bottom: px2rem(10)
-
-    // main > .container
-    //     --bs-gutter-y: 3rem
-    //     @extend .row
-    //     .block-chapter
-    //         @extend .col-md-6
