--- a/assets/sass/custom/layout/_header.sass
+++ b/assets/sass/custom/layout/_header.sass
@@ -8,5 +8,5 @@ header[role="banner"]
         @include media-breakpoint-up(md)
             padding-top: px2rem(40)
     .container
-        @include media-breakpoint-up(md)
+        @include media-breakpoint-up(lg)
             flex-direction: column
