--- a/assets/sass/base/_typography.sass
+++ b/assets/sass/base/_typography.sass
@@ -1,8 +1,14 @@
 h1
     font-family: $font-family-serif
+    font-size: px2rem(30)
     font-style: italic
     font-weight: 400
-    line-height: px2rem(70)
+    line-height: px2rem(44)
+    @include media-breakpoint-up(lg)
+        line-height: px2rem(70)
+
+h2
+    line-height: px2rem(36)
 
 blockquote
     font-family: $font-family-serif
