--- a/assets/sass/base/_typography.sass
+++ b/assets/sass/base/_typography.sass
@@ -1,10 +1,10 @@
 h1
     font-family: $font-family-serif
-    font-size: px2rem(30)
     font-style: italic
     font-weight: 400
     line-height: px2rem(44)
-    @include media-breakpoint-up(lg)
+    @include media-breakpoint-up(md)
+        font-size: px2rem(50)
         line-height: px2rem(70)
 
 h2
