--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,5 +5,6 @@
 @import "custom/base/defaults"
 @import "custom/base/fonts"
 @import "custom/components/menu"
+@import "custom/components/block-testimonials"
 @import "custom/layout/header"
 @import "custom/pages/page"
