--- a/assets/sass/components/_hero.sass
+++ b/assets/sass/components/_hero.sass
@@ -19,3 +19,9 @@
             font-weight: 700
             line-height: 1.3
             margin-bottom: px2rem(10)
+    .title-avatar
+        display: flex
+        flex-direction: column-reverse
+    .avatar
+        margin: 0 auto px2rem(20)
+        max-width: 196px
