--- a/assets/sass/custom/components/_menu.sass
+++ b/assets/sass/custom/components/_menu.sass
@@ -22,7 +22,7 @@
                 & > a,
                 & > span
                     font-weight: 700
-                & > a
+                &:not(.has-children) > a
                     @extend .stretched-link
 
         .nav-level-3
