Fix table and page informations

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -2,9 +2,11 @@
 @import "abstracts/variables"
 @import "hugo-osuny"
 @import "components/stakeholder"
+@import "components/table"
 @import "custom/base/defaults"
 @import "custom/base/fonts"
 @import "custom/components/menu"
 @import "custom/components/block-testimonials"
 @import "custom/layout/header"
+@import "custom/layout/main"
 @import "custom/pages/page"
