--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -1,7 +1,10 @@
 footer[role="contentinfo"]
     background-color: black
-    padding-bottom: calc(#{$grid-gutter-width} * 2.5)
-    padding-top: calc(#{$grid-gutter-width} * 2.5)
+    padding-bottom: px2rem(40)
+    padding-top: px2rem(40)
+    @include media-breakpoint-up(lg)
+        padding-bottom: px2rem(140)
+        padding-top: px2rem(40)
 
     .logo
         display: inline-block
@@ -16,6 +19,7 @@ footer[role="contentinfo"]
             font-style: italic
             font-weight: 400
             line-height: px2rem(34)
+            margin-bottom: 0
 
     .content
         > div
@@ -26,6 +30,9 @@ footer[role="contentinfo"]
             &:last-child
                 @extend .col-lg-3
                 @extend .offset-lg-3
+                display: flex
+                flex-direction: column
+                justify-content: flex-end
     nav
         margin-left: -$nav-link-padding-x
         > ul
@@ -36,3 +43,4 @@ footer[role="contentinfo"]
         a,
         span
             @extend .nav-link
+            font-size: px2rem(14)
