--- a/assets/sass/components/_stakeholder.sass
+++ b/assets/sass/components/_stakeholder.sass
@@ -15,6 +15,8 @@
         @include media-breakpoint-up(lg)
             --bs-gutter-y: 4rem
             margin-bottom: px2rem(200)
+        @include media-breakpoint-up(xxl)
+            margin-bottom: px2rem(300)
     li
         @extend .col-6
         @extend .col-md-3
