--- a/layouts/partials/footer/footer-simple.html
+++ b/layouts/partials/footer/footer-simple.html
@@ -9,6 +9,7 @@
               "class"       "nav-legal"
             )}}
     </nav>
+    {{ partial "footer/credit.html" }}
   </div>
   <div>
     {{ partial "footer/logo.html" }}
