--- a/assets/sass/custom/pages/_page.sass
+++ b/assets/sass/custom/pages/_page.sass
@@ -11,3 +11,7 @@
             border-bottom: 1px solid rgba(white, .5)
             padding-bottom: px2rem(10)
             width: 100%
+
+    @include media-breakpoint-up(lg)
+        [itemprop='articleBody']
+            max-width: calc(83.33333333% - (#{$grid-gutter-width}/14)*3)
