--- a/assets/sass/custom/layout/_header.sass
+++ b/assets/sass/custom/layout/_header.sass
@@ -1,9 +1,20 @@
 header[role="banner"]
     .logo
+        img
+            height: 31px
+        @include media-breakpoint-down(lg)
+            margin-left: auto
+            margin-right: auto
         @include media-breakpoint-up(md)
             margin-bottom: px2rem(20)
             img
                 height: 49px
+    @include media-breakpoint-down(lg)
+        nav[role=navigation]
+            button[type=button]
+                position: absolute
+                right: calc(#{$grid-gutter-width} / 2)
+                top: $navbar-padding-y
     .navbar
         @include media-breakpoint-up(md)
             padding-top: px2rem(40)
