Person contact block

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,6 +6,9 @@
 @import "custom/base/fonts"
 @import "custom/components/menu"
 @import "custom/components/block-testimonials"
+@import "custom/components/contacts"
+@import "custom/components/persons"
 @import "custom/layout/header"
 @import "custom/layout/main"
 @import "custom/pages/page"
+@import "custom/pages/person"
