--- a/assets/sass/base/_typography.sass
+++ b/assets/sass/base/_typography.sass
@@ -14,3 +14,7 @@ blockquote
     font-family: $font-family-serif
     font-style: italic
     font-weight: 400
+
+.subline
+    border-bottom: 1px solid rgba(white, .5)
+    padding-bottom: px2rem(10)
