--- a/assets/sass/custom/pages/_person.sass
+++ b/assets/sass/custom/pages/_person.sass
@@ -7,3 +7,6 @@
                 > div:last-of-type
                     @include make-col(5)
                     @include make-col-offset(1)
+            h2
+                @extend .subline
+                margin-bottom: px2rem(20)
