--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,6 +4,7 @@
 @import "components/stakeholder"
 @import "custom/base/defaults"
 @import "custom/base/fonts"
+@import "custom/components/avatar"
 @import "custom/components/menu"
 @import "custom/components/block-testimonials"
 @import "custom/components/contacts"
