--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -1,5 +1,6 @@
 // custom
 $font-family-serif: 'Big Moore It', Serif
+$text-width: calc((100%/12*10) - (24px/14)*3)
 
 // Bootstrap
 $primary: #FFFFFF
