--- a/assets/sass/custom/pages/_page.sass
+++ b/assets/sass/custom/pages/_page.sass
@@ -14,4 +14,4 @@
 
     @include media-breakpoint-up(lg)
         [itemprop='articleBody']
-            max-width: calc(83.33333333% - (#{$grid-gutter-width}/14)*3)
+            max-width: $text-width
