--- a/assets/sass/pages/_home.sass
+++ b/assets/sass/pages/_home.sass
@@ -9,6 +9,8 @@
             margin-bottom: 5rem
 
         @include media-breakpoint-up(lg)
+            section:first-of-type
+                max-width: $text-width
             .top
                 margin-bottom: 0.5rem
                 h2
