--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -1,6 +1,7 @@
 // custom
 $font-family-serif: 'Big Moore It', Serif
-$text-width: calc((100%/12*10) - (24px/14)*3)
+$text-width-8: calc((100%/12*8) - (24px/14)*5)
+$text-width-10: calc((100%/12*10) - (24px/14)*3)
 
 // Bootstrap
 $primary: #FFFFFF
