--- a/assets/sass/custom/pages/_page.sass
+++ b/assets/sass/custom/pages/_page.sass
@@ -12,4 +12,4 @@
 
     @include media-breakpoint-up(lg)
         [itemprop='articleBody']
-            max-width: $text-width
+            max-width: $text-width-10
