--- a/assets/sass/pages/_home.sass
+++ b/assets/sass/pages/_home.sass
@@ -10,7 +10,7 @@
 
         @include media-breakpoint-up(lg)
             section:first-of-type
-                max-width: $text-width
+                max-width: $text-width-8
             .top
                 margin-bottom: 0.5rem
                 h2
