--- a/layouts/persons/single.html
+++ b/layouts/persons/single.html
@@ -33,7 +33,7 @@
           {{ end }}
         </div>
       </div>
-      {{ partial "header/breadcrumbs.html" (dict "context" .) }}
+      {{ partial "header/breadcrumbs.html" . }}
     </div>
   </header>
 
