--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,6 +6,7 @@
 @import "custom/base/fonts"
 @import "custom/components/avatar"
 @import "custom/components/menu"
+@import "custom/components/block-gallery"
 @import "custom/components/block-testimonials"
 @import "custom/components/contacts"
 @import "custom/components/persons"
