--- a/assets/sass/custom/components/_contacts.sass
+++ b/assets/sass/custom/components/_contacts.sass
@@ -1,6 +1,8 @@
 .contacts
     list-style: none
     text-align: left
+    @include media-breakpoint-down(md)
+        padding-left: 0
     li
         margin-bottom: $grid-gutter-width
         a
