--- a/layouts/partials/footer/stakeholder.html
+++ b/layouts/partials/footer/stakeholder.html
@@ -41,5 +41,10 @@
         <img src="/assets/images/logos/logo-mica.svg" alt="Laboratoire MICA" width="160" height="54">
       </a>
     </li>
+    <li>
+      <a href="https://roseprimaire.com/" target="_blank" rel="noreferrer">
+        <img src="/assets/images/logos/logo-rose-primaire.svg" alt="Rose Primaire" width="116" height="50">
+      </a>
+    </li>
   </ul>
 </section>
