--- a/assets/sass/custom/components/_block-testimonials.sass
+++ b/assets/sass/custom/components/_block-testimonials.sass
@@ -4,6 +4,7 @@
 
     .testimonials
         margin-left: auto
+        padding-top: calc(5.625rem / 2)
         position: relative
         width: calc(80% - (#{$grid-gutter-width} / 4))
 
@@ -13,7 +14,6 @@
             line-height: px2rem(60)
         &::before
             position: absolute
-            top: 0
             transform: translateY(-50%)
     figcaption
         &::before
