--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -52,6 +52,7 @@ footer[role="contentinfo"]
         margin-left: -$nav-link-padding-x
         > ul
             @extend .nav
+            align-items: flex-start
             flex-direction: column
         li
             @extend .nav-item
