--- a/assets/sass/custom/components/_block-testimonials.sass
+++ b/assets/sass/custom/components/_block-testimonials.sass
@@ -4,22 +4,35 @@
 
     .testimonials
         margin-left: auto
-        padding-top: calc(5.625rem / 2)
+        padding-top: map-get($spacers, 5)
         position: relative
-        width: calc(80% - (#{$grid-gutter-width} / 4))
 
     blockquote
         @include media-breakpoint-up(md)
             font-size: px2rem(40)
             line-height: px2rem(60)
+            margin-bottom: px2rem(-30)
+            margin-left: calc(20% + (#{$grid-gutter-width} / 4))
         &::before
             position: absolute
-            transform: translateY(-50%)
+            transform: translate(-.65rem, -50%)
+
     figcaption
+        position: relative
         &::before
             content: none
 
-    .avatar
-        bottom: 0
-        position: absolute
-        right: calc(100% + #{$grid-gutter-width})
+        @include media-breakpoint-up(md)
+            span
+                margin-left: calc(20% + (#{$grid-gutter-width} / 4))
+                margin-top: px2rem(30)
+
+            .avatar + span
+                margin-left: 0
+                margin-top: 0
+
+    .splide__pagination
+        @include media-breakpoint-up(md)
+            bottom: 0
+            left: calc(20% + (#{$grid-gutter-width} / 4) - 1rem)
+            position: absolute
