--- a/layouts/partials/footer/stakeholder.html
+++ b/layouts/partials/footer/stakeholder.html
@@ -23,7 +23,7 @@
     </li>
     <li>
       <a href="https://project.inria.fr/classcode/" target="_blank" rel="noreferrer">
-        <img src="/assets/images/logos/logo-classcode.svg" alt="Class’Code" width="160" height="">
+        <img src="/assets/images/logos/logo-classcode.svg" alt="Class’Code" width="160" height="41">
       </a>
     </li>
     <li>
