--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,6 +9,7 @@
 @import "custom/components/block-gallery"
 @import "custom/components/block-testimonials"
 @import "custom/components/contacts"
+@import "custom/components/menu-expand"
 @import "custom/layout/header"
 @import "custom/pages/page"
 @import "custom/pages/person"
