--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -9,10 +9,14 @@ $body-bg: #222222
 $body-color: #FFFFFF
 $link-color: #FFFFFF
 
+$gray-600: #CED4DA
+
 $blockquote-font-size: px2rem(30)
 $blockquote-footer-color: inherit
 $blockquote-footer-font-size: 1rem
 $blockquote-margin-y: 0
+
+$border-color: $gray-600
 
 $breadcrumb-active-color: white
 $breadcrumb-font-size: px2rem(14)
@@ -45,3 +49,5 @@ $navbar-brand-padding-y: 0
 $navbar-brand-margin-end: 0
 
 $small-font-size: px2rem(14)
+
+$table-border-color: $gray-600
