--- a/assets/sass/pages/_home.sass
+++ b/assets/sass/pages/_home.sass
@@ -12,19 +12,21 @@
             section:first-of-type
                 max-width: $text-width-8
             .top
-                margin-bottom: 0.5rem
-                h2
-                    width: 100%
+                margin-bottom: 01rem
+                position: relative
                 a
-                    border-bottom: 1px solid rgba(white, .3)
                     display: block
                     padding-bottom: 0.5rem
                     text-decoration: none
-                    transition: border .3s ease
+                    &::before
+                        background-color: rgba(white, .3)
+                        bottom: 0
+                        content: ''
+                        height: 1px
+                        left: 0
+                        position: absolute
+                        transition: background-color .3s ease
+                        width: 100%
                     &:hover
-                        border-bottom-color: white
-                > div
-                    position: absolute
-                    right: 0
-                    white-space: nowrap
-                    width: auto
+                        &::before
+                            background-color: white
