--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -16,7 +16,7 @@ $blockquote-footer-color: inherit
 $blockquote-footer-font-size: 1rem
 $blockquote-margin-y: 0
 
-$border-color: $gray-600
+$border-color: rgba(white, .4)
 
 $breadcrumb-active-color: white
 $breadcrumb-font-size: px2rem(14)
@@ -50,4 +50,4 @@ $navbar-brand-margin-end: 0
 
 $small-font-size: px2rem(14)
 
-$table-border-color: $gray-600
+$table-border-color: $border-color
