--- a/layouts/partials/footer/footer-simple.html
+++ b/layouts/partials/footer/footer-simple.html
@@ -12,5 +12,6 @@
   <div>
     {{ partial "footer/logo.html" }}
     {{ partial "footer/site.html" }}
+    {{ partial "footer/backtotop.html" }}
   </div>
 </div>
