--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -53,6 +53,7 @@ footer[role="contentinfo"]
                         content: ''
                         height: 1000px
                         left: 50%
+                        pointer-events: none
                         position: absolute
                         top: 0
                         transform: translate(-50%, -250px)
