--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -33,6 +33,10 @@ footer[role="contentinfo"]
                 &:last-child
                     text-align: right
 
+            &:first-child
+                @include media-breakpoint-down(md)
+                    position: relative
+                    z-index: 1
             &:last-child
                 @extend .col-lg-3
                 @extend .offset-lg-3
