Fix folder's names

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -10,7 +10,7 @@
 @import "_default/partials/menu-expand"
 @import "_default/partials/stakeholder"
 
-@import "_default/layout/header"
+@import "_default/layouts/header"
 
 @import "_default/blocks/block-gallery"
 @import "_default/blocks/block-testimonials"
