--- a/assets/sass/_theme/_default/_configuration.sass
+++ b/assets/sass/_theme/_default/_configuration.sass
@@ -1,4 +1,6 @@
-// custom
+/*  Theme & Bootstrap variables
+    Get all bootstrap variables in node_modules/bootstrap/scss/_variables.scss
+
 $font-family-serif: 'Big Moore It', Serif
 $text-width-8: calc((100%/12*8) - (24px/14)*5)
 $text-width-10: calc((100%/12*10) - (24px/14)*3)
