--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -12,8 +12,8 @@
 
 @import "_default/layouts/header"
 
-@import "_default/blocks/block-gallery"
-@import "_default/blocks/block-testimonials"
+@import "blocks/gallery"
+@import "blocks/testimonials"
 
-@import "pages/list"
-@import "persons/single"
+@import "pages/pages"
+@import "persons/pages"
