Update js theme

--- a/assets/sass/_theme/pages/_widgets.sass
+++ b/assets/sass/_theme/pages/_widgets.sass
@@ -15,3 +15,9 @@
         margin-bottom: 0
     a
         @extend .stretched-link
+
+.pages
+    --bs-gutter-y: 1rem
+    @extend .row
+    > *
+        @extend .col-md-6
