Change gallery cols

--- a/layouts/partials/pages/_children.html
+++ b/layouts/partials/pages/_children.html
@@ -1,4 +1,4 @@
-{{ if . }}
+<!-- {{ if . }}
   <section>
     <div class="pages">
       {{ range sort . ".Params.position"  }}
@@ -8,4 +8,4 @@
       {{ end }}
     </div>
   </section>
-{{ end }}
+{{ end }} -->
