--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -12,7 +12,9 @@
 
 @import "_default/layouts/header"
 
+@import "blocks/call_to_action"
 @import "blocks/gallery"
+@import "blocks/pages"
 @import "blocks/testimonials"
 
 @import "pages/pages"
