--- a/assets/sass/_theme/_default/_configuration.sass
+++ b/assets/sass/_theme/_default/_configuration.sass
@@ -11,6 +11,9 @@ $body-bg: #222222
 $body-color: #FFFFFF
 $link-color: #FFFFFF
 
+// Button
+$btn-border-radius: 0
+
 $gray-600: #CED4DA
 
 $blockquote-font-size: px2rem(30)
