--- a/assets/sass/blocks/_pages.sass
+++ b/assets/sass/blocks/_pages.sass
@@ -22,3 +22,8 @@
             &:hover
                 &::before
                     background-color: white
+    .pages
+        .title a
+            text-decoration-color: rgba($white, 0)
+            &:hover
+                text-decoration-color: $white
