--- a/assets/sass/_theme/home/_pages.sass
+++ b/assets/sass/_theme/home/_pages.sass
@@ -11,11 +11,12 @@
             column-gap: $grid-gutter-width
             display: grid
             grid-template-columns: repeat(10, 1fr)
+            padding: 0
             position: relative
             p
                 margin-bottom: 0
             > *
-                grid-column: 1/6
+                grid-column: 1/5
             a
                 @extend .link-more
                 align-self: center
