--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,6 +1,9 @@
+@import "_default/abstracts/mixins"
+
 @import "_theme/hugo-osuny"
 
 // Custom styles
+
 @import "_default/base/defaults"
 @import "_default/base/fonts"
 
