--- a/assets/sass/_theme/blocks/_call_to_action.sass
+++ b/assets/sass/_theme/blocks/_call_to_action.sass
@@ -1,6 +1,24 @@
 .block-call_to_action
-    .block-content
-        background: black
     .call_to_action
+        background: black
         border-width: 0
         padding: $grid-gutter-width
+        position: relative
+        // column-gap: $grid-gutter-width
+        // display: grid
+        // grid-template-columns: repeat(8, 1fr)
+        // p
+        //     margin-bottom: 0
+        // > *
+            // grid-column: 1/5
+        // > a, [role="group"]
+            // align-self: center
+            // grid-column: 6/9
+            // grid-row: 1/3
+            // vertical-align: middle
+        a
+            @include long-arrow
+        [role="group"]
+            a
+                display: block
+            
