--- a/assets/sass/_theme/home/_pages.sass
+++ b/assets/sass/_theme/home/_pages.sass
@@ -32,9 +32,8 @@
                 > *
                     grid-column: 1/5
                 > a, [role="group"]
-                    align-self: center
+                    align-self: baseline
                     grid-column: 6/11
-                    grid-row: 1/3
                     vertical-align: middle
         @include media-breakpoint-down(md)
             background: black
