--- a/assets/sass/_theme/home/_pages.sass
+++ b/assets/sass/_theme/home/_pages.sass
@@ -24,6 +24,8 @@
                 display: grid
                 grid-template-columns: repeat(10, 1fr)
                 padding: 0
+                h2
+                    padding-bottom: map-get($spacers, 3)
                 p
                     margin-bottom: 0
                 > *
