Fix hero, pagination and persons page

--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -58,3 +58,11 @@ $small-font-size: px2rem(14)
 $table-border-color: $border-color
 
 $menu-background-color: black
+$pagination-bg: transparent
+$pagination-border-width: 0
+$pagination-border-radius: 0
+$pagination-border-color: transparent
+$pagination-disabled-bg: transparent
+$pagination-hover-bg: black
+$pagination-active-bg: black
+$pagination-focus-bg: black
