Update osuny theme and fix it

--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -66,3 +66,8 @@ $pagination-disabled-bg: transparent
 $pagination-hover-bg: black
 $pagination-active-bg: black
 $pagination-focus-bg: black
+
+// Blocks
+
+$block-call-to-action-color: white
+$block-call-to-action-background: black
