--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -15,6 +15,7 @@
 
 @import "_default/layouts/header"
 
+@import "blocks/call_to_action"
 @import "blocks/gallery"
 @import "blocks/pages"
 @import "blocks/testimonials"
