--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -3,6 +3,7 @@
 @import "_theme/hugo-osuny"
 
 // Custom styles
+/*! purgecss start ignore */
 
 @import "_default/base/defaults"
 @import "_default/base/fonts"
@@ -22,3 +23,5 @@
 
 @import "pages/pages"
 @import "persons/pages"
+/*! purgecss end ignore */
+
