--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,27 +1,28 @@
-@import "_default/abstracts/mixins"
+@import "_config"
 
 @import "_theme/hugo-osuny"
 
 // Custom styles
 /*! purgecss start ignore */
 
-@import "_default/base/defaults"
-@import "_default/base/fonts"
-
-@import "_default/partials/avatar"
-@import "_default/partials/contacts-list"
-@import "_default/partials/menu"
-@import "_default/partials/menu-expand"
-@import "_default/partials/stakeholder"
-
-@import "_default/layouts/header"
-
-@import "blocks/call_to_action"
-@import "blocks/gallery"
-@import "blocks/pages"
-@import "blocks/testimonials"
-
+@import "home/pages"
 @import "pages/pages"
-@import "persons/pages"
+@import "pages/widgets"
+@import "partials/blocks/call_to_action"
+@import "partials/blocks/gallery"
+@import "partials/blocks/pages"
+@import "partials/blocks/testimonials"
+@import "partials/body/global"
+@import "partials/body/icons"
+@import "partials/body/typography"
+@import "partials/footer/footer"
+@import "partials/footer/stakeholder"
+@import "partials/header/header"
+@import "partials/header/hero"
+@import "partials/header/menu-expand"
+@import "partials/header/menu"
+@import "partials/persons/avatar"
+@import "partials/persons/contacts-list"
+@import "pages/pages"
 /*! purgecss end ignore */
 
