--- a/assets/sass/partials/body/_typography.sass
+++ b/assets/sass/partials/body/_typography.sass
@@ -16,3 +16,25 @@
     font-style: italic
     font-weight: normal
     src: url('../fonts/Big-Moore/font.woff2') format('woff2'), url('/assets/fonts/Big-Moore/font.woff') format('woff')
+
+    
+h1
+    font-family: $font-family-serif
+    font-style: italic
+    font-weight: 400
+    line-height: px2rem(44)
+    @include media-breakpoint-up(md)
+        font-size: px2rem(50)
+        line-height: px2rem(60)
+
+h2
+    line-height: px2rem(36)
+
+blockquote
+    font-family: $font-family-serif
+    font-style: italic
+    font-weight: 400
+
+.subline
+    border-bottom: 1px solid rgba(white, .5)
+    padding-bottom: px2rem(10)
