--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,28 +1,11 @@
-@import "_config"
-
+@import "utils"
+@import "config"
 @import "_theme/hugo-osuny"
 
-// Custom styles
 /*! purgecss start ignore */
-
-@import "home/pages"
-@import "pages/pages"
-@import "pages/widgets"
 @import "partials/blocks/call_to_action"
 @import "partials/blocks/gallery"
 @import "partials/blocks/pages"
 @import "partials/blocks/testimonials"
-@import "partials/body/global"
-@import "partials/body/icons"
-@import "partials/body/typography"
-@import "partials/footer/footer"
 @import "partials/footer/stakeholder"
-@import "partials/header/header"
-@import "partials/header/hero"
-@import "partials/header/menu-expand"
-@import "partials/header/menu"
-@import "partials/persons/avatar"
-@import "partials/persons/contacts-list"
-@import "pages/pages"
 /*! purgecss end ignore */
-
