--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,5 +7,10 @@
 @import "partials/blocks/gallery"
 @import "partials/blocks/pages"
 @import "partials/blocks/testimonials"
+@import "partials/body/global"
+@import "partials/body/typography"
 @import "partials/footer/stakeholder"
+@import "partials/header/header"
+@import "partials/nav/menu"
+@import "partials/nav/menu-expand"
 /*! purgecss end ignore */
