--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -13,4 +13,6 @@
 @import "partials/header/header"
 @import "partials/nav/menu"
 @import "partials/nav/menu-expand"
+@import "partials/persons/avatar"
+@import "partials/persons/contacts-list"
 /*! purgecss end ignore */
