--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -15,4 +15,5 @@
 @import "partials/nav/menu-expand"
 @import "partials/persons/avatar"
 @import "partials/persons/contacts-list"
+@import "persons/pages"
 /*! purgecss end ignore */
